# poppi

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  poppi-launcher.desktop
.github/: FUNDING.yml
src/: app_launcher.rs  calculator.rs  config.rs  emoji_picker.rs  main.rs  search.rs  settings.rs  terminal.rs  ui.rs  utils.rs  window_switcher.rs
